fix(stack-overflow): scrollbar

--- a/styles/stack-overflow/catppuccin.user.css
+++ b/styles/stack-overflow/catppuccin.user.css
@@ -171,6 +171,8 @@
 
       --red-400: fade(@red, 50%);
       --red-500: fade(@red, 60%);
+
+      --scrollbar: @surface1;
     }
 
     .wmd-button > span {
